k8s/namespaces/bullseye/03-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: k8s-pulsifer-ca
  namespace: bullseye
  annotations:
    kubernetes.io/ingress.class: "nginx"
  labels:
    app.kubernetes.io/name: bullseye
    app.kubernetes.io/part-of: bullseye
spec:
  tls:
  - hosts:
    - k8s.pulsifer.ca
    secretName: k8s-pulsifer-ca-tls
  rules:
  - host: k8s.pulsifer.ca
    http:
      paths:
      - path: /
        backend:
          serviceName: web
          servicePort: 8080
