k8s/namespaces/bullseye/03-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: bullseye-k8s-lolwtf-ca
  namespace: bullseye
  annotations:
    kubernetes.io/ingress.class: "nginx"
  labels:
    app.kubernetes.io/name: bullseye
    app.kubernetes.io/part-of: bullseye
spec:
  tls:
  - hosts:
    - bullseye.k8s.lolwtf.ca
    secretName: bullseye-k8s-lolwtf-ca-tls
  rules:
  - host: bullseye.k8s.lolwtf.ca
    http:
      paths:
      - path: /
        backend:
          serviceName: web
          servicePort: 8080
