k8s/namespaces/bullseye/00-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: bullseye
  labels:
    app.kubernetes.io/name: bullseye
    app.kubernetes.io/part-of: bullseye

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
  namespace: bullseye
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
