k8s/namespaces/bullseye/01-network-policy.yml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: bullseye
  namespace: bullseye
  labels:
    app.kubernetes.io/name: bullseye
    app.kubernetes.io/part-of: bullseye
spec:
  egress:
  - {}
  ingress:
  - from:
    ports:
    - port: 22
      protocol: TCP
    - port: 8080
      protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/part-of: bullseye
  policyTypes:
  - Ingress
  - Egress
---
